--- a/docs/guides/src/main/server/fips.adoc
+++ b/docs/guides/src/main/server/fips.adoc
@@ -134,4 +134,66 @@ For Kerberos/SPNEGO, the security provider `SunJGSS` is not yet fully FIPS compl
 if you want to be FIPS compliant. The `KERBEROS` feature is disabled by default in Keycloak when it is executed on FIPS platform and when security provider is not
 available. Details are in the https://bugzilla.redhat.com/show_bug.cgi?id=2051628[bugzilla].
 
+== Run the CLI on the FIPS host
+
+In case you want to run Client Registration CLI (`kcreg.sh|bat` script) or Admin CLI (`kcadm.sh|bat` script), it is needed
+that CLI will also use the BouncyCastle FIPS dependencies instead of plain BouncyCastle dependencies. To achieve this, you may copy the
+jars to the CLI library folder and that is enough. CLI tool will automatically use BCFIPS dependencies instead of plain BC when
+it detects that corresponding BCFIPS jars are present (see above for the versions used). For example use command like this before running CLI:
+
+```
+cp $KEYCLOAK_HOME/providers/bc-fips-*.jar $KEYCLOAK_HOME/bin/client/lib/
+cp $KEYCLOAK_HOME/providers/bctls-fips-*.jar $KEYCLOAK_HOME/bin/client/lib/
+```
+
+NOTE: When trying to use BCFKS truststore/keystore with CLI, you may see issues due this truststore is not the default java keystore type. It can be good to specify it as default in java
+security properties. For example run this command on unix based systems before doing any operation with kcadm|kcreg clients:
+```
+echo "keystore.type=bcfks
+fips.keystore.type=bcfks" > /tmp/kcadm.java.security
+export KC_OPTS="-Djava.security.properties=/tmp/kcadm.java.security"
+```
+
+== Keycloak server in FIPS mode in the container
+
+When you want Keycloak in FIPS mode to be executed inside container, it is needed that your "host" is using FIPS mode as well. The container
+will then "inherit" FIPS mode from the parent host.
+See https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/9/html/security_hardening/using-the-system-wide-cryptographic-policies_security-hardening#enabling-fips-mode-in-a-container_using-the-system-wide-cryptographic-policies[this section]
+in the RHEL documentation for the details.
+
+So keycloak container image will be just automatically in fips mode when executed from the host in FIPS mode. So only things needed is to
+make sure that Keycloak container also uses BCFIPS jars (instead of BC jars) and proper options when started.
+
+Regarding this, it is best to build your own container image as described in the <@links.server id="containers"/> and tweak it to use BCFIPS etc.
+
+For example in the current directory, you can create sub-directory `files` and add:
+
+* BC FIPS jar files as described above
+* Custom keystore file - named for example `keycloak-fips.keystore.bcfks`
+* Security file `kc.java.security` with added provider for SAML
+
+Then create `Dockerfile` in the current directory similar to this:
+
+.Dockerfile:
+[source, dockerfile]
+----
+FROM quay.io/keycloak/keycloak:latest as builder
+
+ADD files /tmp/files/
+
+WORKDIR /opt/keycloak
+RUN cp /tmp/files/*.jar /opt/keycloak/providers/
+RUN cp /tmp/files/keycloak-fips.keystore.* /opt/keycloak/conf/server.keystore
+RUN cp /tmp/files/kc.java.security /opt/keycloak/conf/
+
+RUN /opt/keycloak/bin/kc.sh build --fips-mode=strict
+
+FROM quay.io/keycloak/keycloak:latest
+COPY --from=builder /opt/keycloak/ /opt/keycloak/
+
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
+----
+
+Then build FIPS optimized docker image and start it as described in the <@links.server id="containers"/>. Assumption is to use arguments as described above when starting the image.
+
 </@tmpl.guide>
